# ipuma

./: .gitlab-ci.yml  .gitmodules  CMakeDefinitions.txt  CMakeLists.txt  ChangeLog.md  README.md  atomic_test  atomic_test.cu  bench.sh  build.sh  find_kmer.py  lala  nvcc  nvcc.profile  res.sh
ci/: ci_asm_qual_test-full.sh  ci_asm_qual_test.sh  good-arctic-small.txt  good-arctic12.txt
cmake/Modules/: FindCpuArch.cmake
contrib/: jgi_validate_fastq.cpp  trim_fastq-adapters.sh
contrib/environments/cori-gpu/: gnu.sh  intel.sh
contrib/environments/summit/: gnu.sh
docs/: mhm_guide.html  mhm_guide.md
include/: contigs.hpp  fastq.hpp  gasnet_stats.hpp  kcount.hpp  klign.hpp  kmer.hpp  kmer_dht.hpp  options.hpp  packed_reads.hpp  utils.hpp
ipuma-lib/: CMakeLists.txt
ipuma-lib/src/: CMakeLists.txt  driver.cpp  driver.hpp
mlcgraph/: mlcgraph_pt.py
src/: CMakeLists.txt  alignments.cpp  alignments.hpp  aln_depths.cpp  aln_depths.hpp  block_align_cpu.cpp  contigging.cpp  contigs.cpp  contigs.hpp  dbjg_traversal.cpp  devices_cpu.cpp  devices_gpu.cpp  devices_gpu.hpp  devices_ipu.cpp  extern_template.in.cpp  gasnet_stats.cpp  gasnet_stats.hpp  hash_funcs.c  hash_funcs.h  kcount.cpp  klign.cpp  klign.hpp  kmer.cpp  kmer.hpp  kmer_dht.cpp  kmer_dht.hpp  localassm.cpp  localassm_core.cpp  localassm_gpu.cpp  main.cpp  main_test.cpp  merge_reads.cpp  mhm2.py  mhm2_parse_run_log.pl  options.cpp  options.hpp  packed_reads.cpp  packed_reads.hpp  post_assembly.cpp  scaffolding.cpp  (+5 more)
src/adept-sw/: CMakeLists.txt  driver.cpp  driver.hpp  kernel.cpp
src/cgraph/: CMakeLists.txt
src/gpu-loc-assem/: CMakeLists.txt  driver.cpp  driver.hpp  kernel.cpp  kernel.hpp
src/gpu-utils/: CMakeLists.txt  gpu_common.cpp  gpu_common.hpp  gpu_utils.cpp  gpu_utils.hpp  utils.cpp  utils.hpp
src/kcount/: CMakeLists.txt  kcount.cpp  kcount.hpp  kcount_cpu.cpp  kcount_gpu.cpp  kmer_dht.cpp  kmer_dht.hpp  prime.hpp
src/kcount-gpu/: CMakeLists.txt  gpu_hash_funcs.cpp  gpu_hash_table.cpp  gpu_hash_table.hpp  kcount_driver.cpp  kcount_driver.hpp  parse_and_pack.cpp  parse_and_pack.hpp  prime.cpp  prime.hpp
src/kcount/kcount-gpu/: CMakeLists.txt  gpu_hash_table.cpp  gpu_hash_table.hpp  gqf.cpp  gqf.hpp  gqf_int.hpp  hashutil.cpp  hashutil.hpp  parse_and_pack.cpp  parse_and_pack.hpp  partitioned_counter.cpp  partitioned_counter.hpp  prime.hpp
src/klign/: CMakeLists.txt  aligner_cpu.cpp  aligner_cpu.hpp  block_align_cpu.cpp  block_align_gpu.cpp  block_align_ipu.cpp  ipuswconfig.hpp  klign.cpp  klign.hpp
src/klign/adept-sw/: CMakeLists.txt  driver.cpp  driver.hpp  kernel.hpp
src/klign/ipuma-sw/: CMakeLists.txt  driver.cpp  driver.hpp  ipu_base.cpp  ipu_base.h  ipu_base.hpp  ipu_batch_affine.cpp  ipu_batch_affine.h  ipu_batch_affine.hpp  ipu_batch_asm.hpp  ipulib.hpp  popinit.cpp  popinit.hpp  similarity.cpp  similarity.h  vector.hpp
src/klign/ipuma-sw/codelets/: affine_asm.S  codelet_batch_affine.cpp  codelet_batch_asm.S  codelet_batch_asm.cpp  codelet_multi_affine.cpp  codelet_multi_asm.S  codelet_multi_asm.cpp  codelet_striped_asm.S  codelet_striped_asm.cpp  helper.hpp  sw.cpp
src/localassm/: CMakeLists.txt  localassm_core.cpp  localassm_core.hpp  localassm_cpu.cpp  localassm_gpu.cpp
src/localassm-gpu/: driver.cpp
src/localassm/localassm-gpu/: CMakeLists.txt  driver.cpp  driver.hpp  localassm_struct.hpp
src/mhm2-gpu/: CMakeLists.txt
src/ssw/: ssw_core.cpp
test/: CMakeLists.txt  ipu-ssw-test.cpp  kmer-test.cpp  ssw-test.cpp
test/bandwith_test/: Makefile  bandwidth_test  bandwidth_test.cpp
test/perf/: CMakeLists.txt  ipuma-perf.cpp
test/single_compilation/: Makefile  deserialize  serialize  single_compilation_deserialize.cpp  single_compilation_deserialize_old.cpp  single_compilation_serialize.cpp
test/single_compilation/resources/: exec.poplar_exec  graph.cbor  graph.json  tensor.cbor  tensor.json
